naive_preprocess added

--- a/common/util.ipynb
+++ b/common/util.ipynb
@@ -1,11 +1,49 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 0. 简介\n",
+    "\n",
+    "本 Note 记录使用 Neural Networks (以下简称NN）进行 NLP 时所有的工具函数，包括：\n",
+    "\n",
+    "1. `naive_preprocess(text)` 将输入文本字符串转换为单词 ID 的 Numpy 数组，并返回对应的单词-ID 字典和 ID-单词字典"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. naive_preprocess()\n",
+    "\n",
+    "输入参数为文本序列，输出为文本的单词序列"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def naive_preprocess(text):\n",
+    "    '''基于输入文本构建语料库，附带构建单词-ID 和 ID-单词两份字典，仅处理以 . 结尾的句子文本\n",
+    "    \n",
+    "    :params text: 待处理的文本字符串\n",
+    "    \n",
+    "    :return corpus: 单词 ID 组成的 Numpy 数组\n",
+    "    :return word_to_id: key 是单词，value 是对应的 ID 的字典\n",
+    "    :return id_to_word: key 是 ID，value 是对应的单词的字典\n",
+    "    '''\n",
+    "    \n",
+    "    text = text.lower()\n",
+    "    text = text.replace('.', ' .') # 在文本末尾的句号前添加空格\n",
+    "    words = text.split(' ') # 以空格为定界符将输入文本拆分为单词\n",
+    "    \n",
+    "    word_to_id = {}\n",
+    "    id_to_word = {}\n",
+    "    corpus = []"
+   ]
   }
  ],
  "metadata": {
