naive_preprocess added

--- a/common/util.ipynb
+++ b/common/util.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## 0. 简介\n",
     "\n",
-    "本 Note 记录使用 Neural Networks (以下简称NN）进行 NLP 时所有的工具函数，包括：\n",
+    "本 Note 记录使用 Neural Networks (以下简称NN）做自然语言处理时所用的工具函数，包括：\n",
     "\n",
     "1. `naive_preprocess(text)` 将输入文本字符串转换为单词 ID 的 Numpy 数组，并返回对应的单词-ID 字典和 ID-单词字典"
    ]
@@ -42,7 +42,16 @@
     "    \n",
     "    word_to_id = {}\n",
     "    id_to_word = {}\n",
-    "    corpus = []"
+    "    \n",
+    "    for word in words:\n",
+    "        if word not in word_to_id:\n",
+    "            new_id = len(word_to_id)\n",
+    "            word_to_id[word] = new_id\n",
+    "            id_to_word[new_id] = word\n",
+    "    \n",
+    "    corpus = np.array([word_to_id[w] for w in words])  # 依 word_to_id 构建 corpus\n",
+    "        \n",
+    "    return corpus, word_to_id, id_to_word"
    ]
   }
  ],
