cos_similarity added

--- a/common/util.ipynb
+++ b/common/util.ipynb
@@ -85,7 +85,7 @@
     "    \n",
     "    ## x 和 y 执行正规化，除以各自的 L2 范数\n",
     "    nx = x / (np.sqrt(np.sum(x ** 2)) + eps)  # eps 防止零向量导致的分母为 0 的情况\n",
-    "    ny = y / (np.sqrt(np.sum(y ** 2)) + eps)\n",
+    "    ny = y / (np.sqrt(np.sum(y ** 2)) + eps)  # eps=1e-8 一般会在浮点数近似表示时被“吸收“”\n",
     "    \n",
     "    return np.dot(nx, ny)"
    ]
