create_co_matrix added

--- a/common/util.ipynb
+++ b/common/util.ipynb
@@ -10,9 +10,11 @@
     "\n",
     "1. `naive_preprocess(text)` 将输入文本字符串转换为单词 ID 的 Numpy 数组，并返回对应的单词-ID 字典和 ID-单词字典\n",
     "\n",
-    "2. `cos_similarity(x, y, eps=1e-8)` 计算两个向量之间的余弦相似度 \n",
+    "2. `create_co_matrix(corpus, vocab_size, window_size=1)` 根据词表和窗口大小，创建yi单词 ID 语料库的共现矩阵\n",
     "\n",
-    "3. `most_similay(query, word_to_id, id_to_word, word_matrix, top=5)` 找出 corpus 中和 query 最相近的 top 个单词"
+    "3. `cos_similarity(x, y, eps=1e-8)` 计算两个向量之间的余弦相似度 \n",
+    "\n",
+    "4. `most_similay(query, word_to_id, id_to_word, word_matrix, top=5)` 找出 corpus 中和 query 最相近的 top 个单词"
    ]
   },
   {
