--- a/common/util.ipynb
+++ b/common/util.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "1. `naive_preprocess(text)` 将输入文本字符串转换为单词 ID 的 Numpy 数组，并返回对应的单词-ID 字典和 ID-单词字典\n",
     "\n",
-    "2. `create_co_matrix(corpus, vocab_size, window_size=1)` 根据词表和窗口大小，创建yi单词 ID 语料库的共现矩阵\n",
+    "2. `create_co_matrix(corpus, vocab_size, window_size=1)` 根据词表和窗口大小，在以单词 ID 表现的语料库上构建共现矩阵\n",
     "\n",
     "3. `cos_similarity(x, y, eps=1e-8)` 计算两个向量之间的余弦相似度 \n",
     "\n",
@@ -64,7 +64,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. cos_similarity()\n",
+    "## 2 create_co_matrix()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. cos_similarity()\n",
     "\n",
     "输入参数为两个向量，返回两个向量的余弦相似度"
    ]
@@ -96,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. most_similar()\n",
+    "## 4. most_similar()\n",
     "\n"
    ]
   },
