--- a/common/layers.ipynb
+++ b/common/layers.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## RNN Layers"
+    "## RNN Layers\n",
+    "\n",
+    "这里将 RNN Layer 按**时间粒度**进行划分"
    ]
   },
   {
