--- a/common/layers.ipynb
+++ b/common/layers.ipynb
@@ -6,7 +6,10 @@
    "source": [
     "## RNN Layers\n",
     "\n",
-    "这里将 RNN Layer 按**时间粒度**进行划分"
+    "这里将 RNN Layer 按**时间粒度**进行划分\n",
+    "\n",
+    "1. RNN Layer\n",
+    "2. Time RNN"
    ]
   },
   {
