functions - relu added

--- a/common/functions.ipynb
+++ b/common/functions.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,36 @@
     "    \n",
     "    Return\n",
     "    ------\n",
-    "    u\n",
+    "    施加 sigmoid 计算后的 x\n",
+    "    '''\n",
+    "    \n",
+    "    return 1 / 1 + np.exp(-x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. relu\n",
+    "\n",
+    "`relu()` 的实现主要是将其行为用 `max(0, x)` 函数来模拟"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def relu(x):\n",
+    "    '''\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    x : 输入张量\n",
+    "    \n",
+    "    Return\n",
+    "    ------\n",
+    "    施加le\n",
     "    '''"
    ]
   }
