functions - cross_entropy_error added

--- a/common/functions.ipynb
+++ b/common/functions.ipynb
@@ -120,11 +120,19 @@
    "source": [
     "## 4. cross_entropy_error\n",
     "\n",
-    "交叉熵误差的实现主要是区分输入数据 `y` 和 `t` 是 one-hot 形式给出还是直接以单独的标签数字给出，可以任意选择以何种格式作为计算方式\n",
+    "交叉熵误差的实现要点在于：\n",
     "\n",
-    "另外，为了保证 `log(x)` 中的 $x$ 不接近于 $0$，可以加上一个足够小的值，即 `log(x + 1e-7)`，一般情况下 `1e-7` 会在浮点数的近似表示中被“吸收”\n",
+    "0. 需要区分训练数据中 `t` 是 one-hot 形式给出还是直接以单独的标签数字给出，相比标签数据，one-hot 格式需要做一步解码索引的操作来确定具体的标签值，最后统一转换为 one-hot 格式来处理\n",
     "\n",
-    "输入数据默认按 mini-batch 处理，其中每一行代表一条数据，因为单条数据属于 mini-batch 的特例"
+    "1. 因为 `y` 来自于上一层类似于 `softmax()` 的输出结果，所以 `y` 一定不是一个单一的数据标签\n",
+    "\n",
+    "2. 如果 `t.size == y.size` 根据 1，`t` 一定是 one-hot 格式\n",
+    "\n",
+    "3. 因为 one-hot 格式的特殊性，只有 t 中为 1 的位置对应的元素才会最终算入交叉熵误差中，所以可以用索引 y 在正确输出位置的值来计算交叉熵，即 `y[np.arange(batch_size), t]`\n",
+    "\n",
+    "3. 为了保证 `log(x)` 中的 $x$ 不接近于 $0$，可以加上一个足够小的值，即 `log(x + 1e-7)`，一般情况下 `1e-7` 会在浮点数的近似表示中被“吸收”\n",
+    "\n",
+    "4. 输入数据默认按 mini-batch 处理，其中每一行代表一条数据，因为单条数据属于 mini-batch 的特例，需要将其格式转换为 mini-batch 的形式"
    ]
   },
   {
@@ -145,10 +153,18 @@
     "    交叉熵误差\n",
     "    '''\n",
     "    \n",
-    "    ## 标签数据转 one-hot 格式\n",
-    "    ## 判断是否是标签格式数据\n",
-    "    if t.ndim == 1:  # 标签格式，进行转换\n",
-    "        y = y.reshape(1, )"
+    "    ## 如果是单条数据，也转换为 mini-batch 形式\n",
+    "    if y.ndim == 1:  # 标签格式，转换为行向量形式\n",
+    "        y = y.reshape(1, y.size)\n",
+    "        t = t.reshape(1, t.size)\n",
+    "\n",
+    "    ## 数据是 one-hot 形式\n",
+    "    if t.size == y.size:  # t 是 one-hot 格式\n",
+    "        t = t.argmax(axis=1)  # 取回 t 的标签，因为只有标签处的值才是 1，其他处为 0\n",
+    "    \n",
+    "    batch_size = y.shape[0]\n",
+    "    \n",
+    "    return -np.sum(np.log(y[np.arange(batch_size), t] + 1e-7)) / batch_size"
    ]
   }
  ],
