functions - intro modified

--- a/common/functions.ipynb
+++ b/common/functions.ipynb
@@ -8,10 +8,10 @@
     "\n",
     "本 note 中主要实现神经网络中常见的函数，所有函数的实现均考虑向量计算，包括：\n",
     "\n",
-    "1. `sigmoid(x)`\n",
-    "2. `relu(x)`\n",
-    "3. `softmax(x)`\n",
-    "4. `cross_entropy_entry(y, t)` `y`是预测标签，`t`是实际数据中标签"
+    "1. `sigmoid(x)` - 处理格式张量\n",
+    "2. `relu(x)` - 处理任意格式张量\n",
+    "3. `softmax(x)` - 向量数据或者向量数据组成的 mini-batch 数据\n",
+    "4. `cross_entropy_entry(y, t)` - - 向量数据或者向量数据组成的 mini-batch 数据，其中`y`是预测标签，`t`是实际标签"
    ]
   },
   {
