util - create_co_matrix added

--- a/common/util.ipynb
+++ b/common/util.ipynb
@@ -12,9 +12,11 @@
     "\n",
     "2. `create_co_matrix(corpus, vocab_size, window_size=1)` 根据词表和窗口大小，在以单词 ID 表现的语料库上构建共现矩阵\n",
     "\n",
-    "3. `cos_similarity(x, y, eps=1e-8)` 计算两个向量之间的余弦相似度 \n",
+    "3. `ppmi(C, verbose=False, eps= 1e-8)` 基于共现矩阵计算 PPMI (positive point-wise mutual information) 共现矩阵\n",
     "\n",
-    "4. `most_similay(query, word_to_id, id_to_word, word_matrix, top=5)` 找出 corpus 中和 query 最相近的 top 个单词"
+    "4. `cos_similarity(x, y, eps=1e-8)` 计算两个向量之间的余弦相似度 \n",
+    "\n",
+    "5. `most_similay(query, word_to_id, id_to_word, word_matrix, top=5)` 找出 corpus 中和 query 最相近的 top 个单词"
    ]
   },
   {
@@ -23,7 +25,7 @@
    "source": [
     "## 1. naive_preprocess()\n",
     "\n",
-    "输入参数为文本序列，输出为文本的单词序列"
+    "输入参数为文本序列，输出为该文本的单词 ID 序列，word_to_id 字典以及 id_to_word 字典"
    ]
   },
   {
@@ -52,7 +54,7 @@
     "    for word in words:\n",
     "        if word not in word_to_id:\n",
     "            new_id = len(word_to_id)\n",
-    "            word_to_id[word] = new_id\n",
+    "            word_to_id[word] = new_id  # 核心就是构建 word_to-id 字典\n",
     "            id_to_word[new_id] = word\n",
     "    \n",
     "    corpus = np.array([word_to_id[w] for w in words])  # 依 word_to_id 构建 corpus\n",
@@ -64,15 +66,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2 create_co_matrix()\n"
+    "## 2 create_co_matrix()\n",
+    "\n",
+    "根据给定的词表和窗口，在语料库上统计构建贡献矩阵\n",
+    "\n",
+    "主要参数包括：\n",
+    "\n",
+    "1. `corpus`，提供统计数据的语料库，其中值是单词 ID\n",
+    "2. `vocab_size` 词汇表大小，共现矩阵是一个 (vocab_size, vocab_size) 的方阵\n",
+    "3. `window_size` 目标单词左右两边算作上下文的单词数目\n",
+    "\n",
+    "返回的共现矩阵的行和列都是用 单词 ID 标定的，这进一步说明构建语料库时的 `word_to_id` 和 `id_to_word` 两个字典的重要性"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def create_co_matrix(corpus, vocab_size, window_size=1):\n",
+    "    '''基于 corpus 构建共现矩阵\n",
+    "    \n",
+    "    Paramters\n",
+    "    ---------\n",
+    "    corpus : 单词 ID 形式的语料库\n",
+    "    vocab_size : 词汇表大小\n",
+    "    window_size : 上下文窗口大小，这里给出的是单边窗口大小，实际窗口要乘以 2\n",
+    "    \n",
+    "    Return\n",
+    "    ------\n",
+    "    基于次数的共现矩阵\n",
+    "    '''\n",
+    "    \n",
+    "    corpus_size = len(corpus_size)\n",
+    "    # 初始化共现矩阵\n",
+    "    co_matrix = np.zeros((vocab_size, vocab_size), dtype=np.int32)\n",
+    "    \n",
+    "    ## 关键步骤\n",
+    "    ## 遍历 corpus 中每个单词\n",
+    "    for idx, word_id in enumerate(corpus):\n",
+    "        for i in range(1, window_size + 1):  # 依次统计目标单词的上下文单词，按单边窗口计算单词下标范围\n",
+    "            left_idx = idx - i\n",
+    "            right_idx = idx + i\n",
+    "            \n",
+    "            if left_idx >= 0:\n",
+    "                left_word_id = corpus[left_idx]\n",
+    "                co_matrix[word_id, left_word_id] += 1  # 注意这里是加法操作，因为是统计累计值\n",
+    "            \n",
+    "            if right_idx < corpus_size:\n",
+    "                right_word_id = corpus[right_idx]\n",
+    "                co_matrix[word_id, right_word_id] += 1\n",
+    "                \n",
+    "    return co_matrix"
+   ]
   },
   {
    "cell_type": "markdown",
