util - ppmi added

--- a/common/util.ipynb
+++ b/common/util.ipynb
@@ -125,7 +125,79 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. cos_similarity()\n",
+    "## 3 ppmi()\n",
+    "\n",
+    "基于次数的共现矩阵存在一个问题，某些诸如 **the** 等词语在文本库中会频繁出现，导致这些词会和其他词语多次共现，但这种共现但是没有太大的信息量。针对这个问题，引入了点间互信息（point-wise mutual information）的概念，如下：\n",
+    "\n",
+    "$$\n",
+    "PMI(x,y) = \\log_{2}\\frac{P(x,y)}{P(x)P(y)}\n",
+    "$$\n",
+    "\n",
+    "在共现矩阵上使用 PMI 时，可以将频率做为概率的近似来处理，若 $C(\\cdot)$ 表示计数，$N$ 表示语料库中词语总数，那么如下：\n",
+    "\n",
+    "$$\n",
+    "PMI(x,y) = \\log_{2}\\frac{C(x,y)\\cdot N}{C(x)C(y)}\n",
+    "$$\n",
+    "\n",
+    "需要注意的是，在具体实现时，通常将共现矩阵中所有项加起来作为语料库的词语总数 $N$，是实际数目的两倍，但是方便计算\n",
+    "\n",
+    "另外，因为两个词语的共现次数可能为0，导致 PMI 值为 `-inf`，所以，一般采用 Positive PMI，即 PPMI，如下：\n",
+    "\n",
+    "$$\n",
+    "PPMI(x, y) = max(0, PMI(x, y))\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ppmi(C, verbose=False, eps=1e-8):\n",
+    "    '''构建 PPMI 矩阵\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    C : 共现矩阵\n",
+    "    Verbose : 是否显示转换进度\n",
+    "    eps : 避免出现 log0 情况\n",
+    "    \n",
+    "    Return\n",
+    "    ------\n",
+    "    PPMI 矩阵\n",
+    "    '''\n",
+    "    \n",
+    "    M = np.zeros_like(C, dtype=np.float32)  # PPMI 矩阵\n",
+    "    N = np.sum(C)  # 计算语料库中的词汇量，实际是两倍的语料库词汇量\n",
+    "    S = np.sum(C, axis=0)  # 计算每一个单词在语料库中出现的次数\n",
+    "    \n",
+    "    total = C.shape[0] * C.shape[1]  # 总共需要执行的步骤数目\n",
+    "    cnt = 0  # 用于追踪进度\n",
+    "    \n",
+    "    ## 先行后列\n",
+    "    for i in range(C.shape[0]):\n",
+    "        for j in range(C.shape[1]):\n",
+    "            pmi = np.log2(C[i, j] * N) / (S[i] * S[j]) + eps)\n",
+    "            M[i, j] = max(0, pmi)\n",
+    "            \n",
+    "            ## 处理输出进度，每 1% 输出依次\n",
+    "            ## 注意这里将 cnt 的计算放到条件判断中去，避免无意义计算\n",
+    "            if verbose:\n",
+    "                cnt +=1\n",
+    "                ## 每次完成 1%，输出\n",
+    "                if cnt % (total//100) == 0:\n",
+    "                    print('.1f%% done', %(100*cnt/total))\n",
+    "    \n",
+    "    return M\n",
+    "                "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. cos_similarity()\n",
     "\n",
     "输入参数为两个向量，返回两个向量的余弦相似度"
    ]
@@ -157,7 +229,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. most_similar()\n",
+    "## 5. most_similar()\n",
     "\n"
    ]
   },
