util - most_similar added

--- a/common/util.ipynb
+++ b/common/util.ipynb
@@ -189,8 +189,7 @@
     "                if cnt % (total//100) == 0:\n",
     "                    print('.1f%% done', %(100*cnt/total))\n",
     "    \n",
-    "    return M\n",
-    "                "
+    "    return M"
    ]
   },
   {
@@ -230,6 +229,8 @@
    "metadata": {},
    "source": [
     "## 5. most_similar()\n",
+    "\n",
+    "给出 query 和 corpus，找出 corpus 中和 query 最相近的 top 个单词\n",
     "\n"
    ]
   },
