util - most_similar added

--- a/common/util.ipynb
+++ b/common/util.ipynb
@@ -16,7 +16,9 @@
     "\n",
     "4. `cos_similarity(x, y, eps=1e-8)` 计算两个向量之间的余弦相似度 \n",
     "\n",
-    "5. `most_similay(query, word_to_id, id_to_word, word_matrix, top=5)` 找出 corpus 中和 query 最相近的 top 个单词"
+    "5. `most_similay(query, word_to_id, id_to_word, word_matrix, top=5)` 找出由词向量表示的 `word_matrix` 中和 `query` 最相近的 `top` 个单词\n",
+    "\n",
+    "6. `convert_one_hot(corpus, vocab_size)` 将用单词 ID 表示的 `corpus` 转换为 one-hot 格式，其中 `corpus` 是一维或者二维的 Numpy 数组"
    ]
   },
   {
@@ -30,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,15 +90,11 @@
     "def create_co_matrix(corpus, vocab_size, window_size=1):\n",
     "    '''基于 corpus 构建共现矩阵\n",
     "    \n",
-    "    Paramters\n",
-    "    ---------\n",
-    "    corpus : 单词 ID 形式的语料库\n",
-    "    vocab_size : 词汇表大小\n",
-    "    window_size : 上下文窗口大小，这里给出的是单边窗口大小，实际窗口要乘以 2\n",
+    "    :param corpus: 单词 ID 形式的语料库\n",
+    "    :param vocab_size: 词汇表大小\n",
+    "    :param window_size: 上下文窗口大小，这里给出的是单边窗口大小，实际窗口要乘以 2\n",
     "    \n",
-    "    Return\n",
-    "    ------\n",
-    "    基于次数的共现矩阵\n",
+    "    :return: 基于次数的共现矩阵\n",
     "    '''\n",
     "    \n",
     "    corpus_size = len(corpus_size)\n",
@@ -150,22 +148,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-7-88426e7c912a>, line 32)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-88426e7c912a>\"\u001b[0;36m, line \u001b[0;32m32\u001b[0m\n\u001b[0;31m    print('%.1f%% done', % (100*cnt/total))\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def ppmi(C, verbose=False, eps=1e-8):\n",
     "    '''构建 PPMI 矩阵\n",
     "    \n",
     "    Parameters\n",
     "    ----------\n",
-    "    C : 共现矩阵\n",
-    "    Verbose : 是否显示转换进度\n",
-    "    eps : 避免出现 log0 情况\n",
+    "    :param C: 共现矩阵\n",
+    "    :param Verbose: 是否显示转换进度\n",
+    "    :param eps: 避免出现 log0 情况\n",
     "    \n",
-    "    Return\n",
-    "    ------\n",
-    "    PPMI 矩阵\n",
+    "    :return: PPMI 矩阵\n",
     "    '''\n",
     "    \n",
     "    M = np.zeros_like(C, dtype=np.float32)  # PPMI 矩阵\n",
@@ -178,7 +183,7 @@
     "    ## 先行后列\n",
     "    for i in range(C.shape[0]):\n",
     "        for j in range(C.shape[1]):\n",
-    "            pmi = np.log2(C[i, j] * N) / (S[i] * S[j]) + eps)\n",
+    "            pmi = np.log2((C[i, j] * N) / (S[i] * S[j]) + eps)\n",
     "            M[i, j] = max(0, pmi)\n",
     "            \n",
     "            ## 处理输出进度，每 1% 输出依次\n",
@@ -187,7 +192,7 @@
     "                cnt +=1\n",
     "                ## 每次完成 1%，输出\n",
     "                if cnt % (total//100) == 0:\n",
-    "                    print('.1f%% done', %(100*cnt/total))\n",
+    "                    print('%.1f%% done', % (100*cnt/total))\n",
     "    \n",
     "    return M"
    ]
@@ -203,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +236,8 @@
     "## 5. most_similar()\n",
     "\n",
     "给出 query 和 corpus，找出 corpus 中和 query 最相近的 top 个单词\n",
-    "\n"
+    "\n",
+    "实现中的关键是计算完词汇表所有与 `query` 的余弦值后，使用 `np.argsort()` 返回排序后的索引值"
    ]
   },
   {
@@ -239,7 +245,48 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def most_similar(query, word_to_id, id_to_word, word_matrix, top=5):\n",
+    "    '''在由词向量组成的 word_matrix 中搜索与单词 query 最相近的 top 个单词\n",
+    "    \n",
+    "    :param query: 目标词语\n",
+    "    :param word_to_id: 词语到 ID 的词典\n",
+    "    :param id_to_word: ID 到 词语的词典\n",
+    "    :param word_matirx: 所有词向量按行叠加的矩阵，单词用其语料库中 ID 索引\n",
+    "    :param top: 最相近的 top 个单词\n",
+    "    \n",
+    "    :return: 最相近的 top 个单词和对应的相似度\n",
+    "    '''\n",
+    "    \n",
+    "    if query not in word_to_id:\n",
+    "        print('%s is not found', % query)\n",
+    "        return\n",
+    "    \n",
+    "    print('[query] ' + query)\n",
+    "    \n",
+    "    query_id = word_to_id[query]\n",
+    "    query_vec = word_matrix[query_id]\n",
+    "    \n",
+    "    vocab_size = len(word_to_id)\n",
+    "    \n",
+    "    ## 存放和 query 的相似度的向量\n",
+    "    similarity = np.ones(vocab_size)\n",
+    "    \n",
+    "    ## 遍历 word_matrix，计算所有相似度\n",
+    "    for i in range(vocab_size):\n",
+    "        similarity[i] = cos_similarity(query_vec, word_matrix[i])\n",
+    "        \n",
+    "    ## 输出前 top 个单词\n",
+    "    count = 0\n",
+    "    for i in (-1 * similarity).argsort():\n",
+    "        if id_to_word[i] == query:\n",
+    "            continue  # 跳过 query 自身\n",
+    "        print(' %s: %s', % (id_to_word[i], similarity[i]))\n",
+    "        \n",
+    "        count += 1\n",
+    "        if count >= top:\n",
+    "            return"
+   ]
   }
  ],
  "metadata": {
