util - most_similar added

--- a/common/util.ipynb
+++ b/common/util.ipynb
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
     "    '''\n",
     "    \n",
     "    if query not in word_to_id:\n",
-    "        print('%s is not found', % query)\n",
+    "        print('%s is not found' % query)\n",
     "        return\n",
     "    \n",
     "    print('[query] ' + query)\n",
@@ -281,7 +281,7 @@
     "    for i in (-1 * similarity).argsort():\n",
     "        if id_to_word[i] == query:\n",
     "            continue  # 跳过 query 自身\n",
-    "        print(' %s: %s', % (id_to_word[i], similarity[i]))\n",
+    "        print(' %s: %s' % (id_to_word[i], similarity[i]))\n",
     "        \n",
     "        count += 1\n",
     "        if count >= top:\n",
