util - convert_one_hot added

--- a/common/util.ipynb
+++ b/common/util.ipynb
@@ -148,18 +148,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-7-88426e7c912a>, line 32)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-88426e7c912a>\"\u001b[0;36m, line \u001b[0;32m32\u001b[0m\n\u001b[0;31m    print('%.1f%% done', % (100*cnt/total))\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def ppmi(C, verbose=False, eps=1e-8):\n",
     "    '''构建 PPMI 矩阵\n",
@@ -192,7 +183,7 @@
     "                cnt +=1\n",
     "                ## 每次完成 1%，输出\n",
     "                if cnt % (total//100) == 0:\n",
-    "                    print('%.1f%% done', % (100*cnt/total))\n",
+    "                    print('%.1f%% done' % (100*cnt/total))\n",
     "    \n",
     "    return M"
    ]
@@ -286,6 +277,34 @@
     "        count += 1\n",
     "        if count >= top:\n",
     "            return"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6 convert_one_hot()\n",
+    "\n",
+    "将单词-ID 清单的语料库转换为 one-hot 格式的语料库，其中每一个单词用一个 one-hot 向量表示\n",
+    "\n",
+    "语料库可以是一维或二维的 Numpy 数组；转换后的语料库可以是二维或者三维 Numpy 数组"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_one_hot(corpus, vocab_size):\n",
+    "    '''将语料库转换为 one-hot 格式\n",
+    "    \n",
+    "    :param corpus: 用单词-ID 清单表示的语料库（一维或者二维的 Numpy 数组）\n",
+    "    :param vocab_size: 词汇库大小\n",
+    "    :return : 用 one-hot 清单表示的语料库 (二维或者三维的 Numpy 数组)\n",
+    "    '''\n",
+    "    \n",
+    "    "
    ]
   }
  ],
