util - normalize added

--- a/common/util.ipynb
+++ b/common/util.ipynb
@@ -18,7 +18,9 @@
     "\n",
     "5. `most_similay(query, word_to_id, id_to_word, word_matrix, top=5)` 找出由词向量表示的 `word_matrix` 中和 `query` 最相近的 `top` 个单词\n",
     "\n",
-    "6. `convert_one_hot(corpus, vocab_size)` 将用单词 ID 表示的 `corpus` 转换为 one-hot 格式，其中 `corpus` 是一维或者二维的 Numpy 数组"
+    "6. `convert_one_hot(corpus, vocab_size)` 将用单词 ID 表示的 `corpus` 转换为 one-hot 格式，其中 `corpus` 是一维或者二维的 Numpy 数组\n",
+    "\n",
+    "7. `normalize(x)` 对 `x` 做正规化"
    ]
   },
   {
@@ -292,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +306,47 @@
     "    :return : 用 one-hot 清单表示的语料库 (二维或者三维的 Numpy 数组)\n",
     "    '''\n",
     "    \n",
-    "    "
+    "    N = corpus.shape[0]\n",
+    "    \n",
+    "    ## 一维清单\n",
+    "    if corpus.ndim == 1:\n",
+    "        one_hot = np.zeros((N, vocab_size), dtype=np.int32)\n",
+    "        for idx, word_id in enumerate(corpus):\n",
+    "            one_hot[idx, word_id] = 1  # 展开单词 ID 为 one-hot\n",
+    "            \n",
+    "    ## 二维清单\n",
+    "    if corpus.ndim == 2:\n",
+    "        C = corpus.shape[1]\n",
+    "        ont_hot = np.zeros((N, C, vocab_size), dtype=np.int32)\n",
+    "        for id1, words in enumerate(corpus):\n",
+    "            for id2, word_id in enumerate(words):\n",
+    "                one_hot[id1, id2, word_id] == 1\n",
+    "                \n",
+    "    return one_hot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7 normalize()\n",
+    "\n",
+    "将给定的 `x` 做正规化操作，`x` 是一维或者二维"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def normalize(x):\n",
+    "    if x.ndim == 2:\n",
+    "        x /= np.sqrt((x * x).sum(axis=1, keepdims=True))\n",
+    "    elif x.ndim == 1:\n",
+    "        x /= np.sqrt((x * x).sum())\n",
+    "        \n",
+    "    return x"
    ]
   }
  ],
