layers - intro added

--- a/common/layers.ipynb
+++ b/common/layers.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 0 Intro\n",
+    "\n",
+    "本 note 关注于实现神经网络中常用的层，设计原则如下：\n",
+    "\n",
+    "1. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## RNN Layers\n",
     "\n",
     "这里将 RNN Layer 按**时间粒度**进行划分\n",
