layers - MatMul added

--- a/common/layers.ipynb
+++ b/common/layers.ipynb
@@ -8,19 +8,38 @@
     "\n",
     "本 note 关注于实现神经网络中常用的层，设计原则如下：\n",
     "\n",
-    "1. "
+    "1. 每一层均使用一个类来实现\n",
+    "2. 每一个类维护前向计算时所需要的**参数**、后向计算时所需要的**中间结果**、更新参数时所需要的**梯度**\n",
+    "3. 每个类的**参数**和**梯度**用列表 `params` 和 `grads` 打包，便于整个神经网络的训练\n",
+    "4. 每一个类至少包含三个方法，即 `__init__()`、`forward()`、`backward()`\n",
+    "5. 复杂类可以基于简单类来实现\n",
+    "\n",
+    "**备注**\n",
+    "> 梯度的形状和对应参数的形状一致"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## RNN Layers\n",
+    "## 1 MatMul Layers\n",
     "\n",
-    "这里将 RNN Layer 按**时间粒度**进行划分\n",
+    "本层执行矩阵乘法运算，即 $\\mathbf{y} = \\mathbf{x}\\mathbf{W}$，这里不考虑偏置值\n",
     "\n",
-    "1. RNN Layer\n",
-    "2. Time RNN"
+    "实现如下：\n",
+    "\n",
+    "**成员变量**\n",
+    "1. 参数： `W` - 参数矩阵\n",
+    "2. 中间结果 `x` - 输入数据\n",
+    "3. 梯度: `dW`\n",
+    "\n",
+    "**成员函数**\n",
+    "\n",
+    "1. `__init__(self, W)`\n",
+    "2. `forward(self, x)`\n",
+    "3. `backward(self, dout)`\n",
+    "\n",
+    "实现如下："
    ]
   },
   {
@@ -28,7 +47,44 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class MatMul:\n",
+    "    def __init__(self, W):\n",
+    "        '''初始化所需要维护的成员变量，其中参数 W 由外界传入\n",
+    "        '''\n",
+    "        self.params = [W]\n",
+    "        self.grads = [np.zeros_like(W)]\n",
+    "        self.x = None\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        '''前向计算\n",
+    "        \n",
+    "        :param x: 是输入数据\n",
+    "        \n",
+    "        :return: 输出矩阵乘法的结果\n",
+    "        '''\n",
+    "        W, = self.params\n",
+    "        self.x = x\n",
+    "        out = np.dot(x, W)\n",
+    "        \n",
+    "        return out\n",
+    "    \n",
+    "    def backward(self, dout):\n",
+    "        '''后向计算，计算更新本层参数的梯度，以及传播到后一层的导数\n",
+    "        \n",
+    "        :param dout: 上游来的导数信号\n",
+    "        \n",
+    "        :return dx: 传给下游的导数信号\n",
+    "        '''\n",
+    "        ## 这里考虑了 x 是批数据的情况\n",
+    "        W, = self.params\n",
+    "        dW = np.dot(self.x.T, dout)\n",
+    "        dx = np.dot(dout, W.T)\n",
+    "        \n",
+    "        self.grads[0][...] = dW  # 注意这里的深拷贝\n",
+    "        \n",
+    "        return dx"
+   ]
   }
  ],
  "metadata": {
