layers - Affine added

--- a/common/layers.ipynb
+++ b/common/layers.ipynb
@@ -22,24 +22,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1 MatMul Layers\n",
+    "## 1 MatMul Layer\n",
     "\n",
     "本层执行矩阵乘法运算，即 $\\mathbf{y} = \\mathbf{x}\\mathbf{W}$，这里不考虑偏置值\n",
     "\n",
     "实现如下：\n",
     "\n",
     "**成员变量**\n",
-    "1. 参数： `W` - 参数矩阵\n",
-    "2. 中间结果 `x` - 输入数据\n",
-    "3. 梯度: `dW`\n",
+    "- 参数： `W` - 参数矩阵\n",
+    "- 中间结果 `x` - 输入数据\n",
+    "- 梯度: `dW`\n",
     "\n",
     "**成员函数**\n",
     "\n",
-    "1. `__init__(self, W)`\n",
-    "2. `forward(self, x)`\n",
-    "3. `backward(self, dout)`\n",
+    "- `__init__(self, W)`\n",
+    "- `forward(self, x)`\n",
+    "- `backward(self, dout)`\n",
     "\n",
-    "实现如下："
+    "代码如下："
    ]
   },
   {
@@ -84,6 +84,64 @@
     "        self.grads[0][...] = dW  # 注意这里的深拷贝\n",
     "        \n",
     "        return dx"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2 Affine Layer\n",
+    "\n",
+    "Affine 层实现的仿射变换，即 $\\mathbf{y}=\\mathbf{x}\\mathbf{W} + \\mathbf{b}$，相比 MatMul，Affine 多了一个偏置值的计算\n",
+    "\n",
+    "实现如下：\n",
+    "\n",
+    "**成员变量**\n",
+    "\n",
+    "- 参数：`W` - 矩阵； `b` - 偏置值;\n",
+    "- 中间结果: `x` - 输入数据\n",
+    "- 梯度: `dW`；`db`\n",
+    "\n",
+    "**成员函数**\n",
+    "\n",
+    "- `__init__(self, W, b)`\n",
+    "- `forward(self, x)`\n",
+    "- `backward(self, dout)`\n",
+    "\n",
+    "代码如下："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Affine:\n",
+    "    def __init__(self, W, b):\n",
+    "        '''初始化 Affine 所维护的参数，参数 W 和 b 由外界传入\n",
+    "        '''\n",
+    "        self.params = [W, b]  # 参数列表\n",
+    "        self.grads = [np.zeros_like(W), np.zeros_like(b)]  # 梯度列表\n",
+    "        self.x = None\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        '''前向计算\n",
+    "        '''\n",
+    "        W, b = self.params\n",
+    "        self.x = x\n",
+    "        out = np.dot(x, W) + b\n",
+    "        \n",
+    "        return out\n",
+    "    \n",
+    "    def backward(self, dout):\n",
+    "        '''后向计算，计算更新本层参数所需的梯度，以及下游所需的导数信号\n",
+    "        '''\n",
+    "        W, b = self.params\n",
+    "        \n",
+    "        dW\n",
+    "        db\n",
+    "        dx = s"
    ]
   }
  ],
